<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Gym App</string>
    <string name="login_text">Iniciar Sesión</string>
    <string name="password_hint">Contraseña</string>
    <string name="user_hint">Usuario</string>
    <string name="login_button">INGRESAR</string>
    <string name="logout_text">Cerrar Sesión</string>
    <string name="saludo">Hola %s</string>
    <string name="register_title">Registrarse</string>
    <string name="register_button">Registrarme</string>
    <string name="goal_hint">Meta</string>
    <string name="weight_hint">Peso actual</string>
    <string name="name_hint">Nombre</string>
    <string name="arrow_return_description">arrow return</string>
    <string name="title_activity_exercises">Todos los ejercicios</string>
    <string name="beginner_tab_text">Principiante</string>
    <string name="intermediate_tab_text">Intermedio</string>
    <string name="advanced_tab_text">Avanzado</string>
    <string name="absBeginner">Abdominales Principiante</string>
    <string name="chestBeginner">Pecho Principiante</string>
    <string name="armBeginner">Brazo Principiante</string>
    <string name="legBeginner">Piernas Principiante</string>
    <string name="backAndShoulderBeginner">Espalda y hombro Principiantes</string>
    <string name="register_link">Registrate</string>
    <string name="app_name_title1">GYM</string>
    <string name="app_name_title2">APP</string>
    <string name="slogan">Sé una inspiración</string>
    <string name="login_link">Iniciar Sesión</string>
    <string name="already_has_acc">¿Ya tienes una cuenta?</string>
    <string name="not_acc">¿No tienes una cuenta?</string>
    <string name="alt_logo">Logo</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_fragment">SIGUIENTE</string>
    <string name="prev_fragment">ATRAS</string>
    <string name="loading_text" tools:ignore="Typos">Espere un momento…</string>
    <string name="finalizeObBtn">Finalizar</string>
    <string name="homeMenuTitle">Home</string>
    <string name="exercisesMenuTitle">Exercises</string>
    <string name="shopMenuTitle">Shop</string>
    <string name="accountMenuTitle">Perfil</string>
    <!-- Exercises -->
    <string name="absIntermediate">Abdominales Intermedio</string>
    <string name="chestIntermediate">Pecho Intermedio</string>
    <string name="armIntermediate">Brazo Intermedio</string>
    <string name="legIntermediate">Pierna Intermedio</string>
    <string name="backAndShoulderIntermediate">Espalda y hombro Intermedio</string>
    <string name="absAdvanced">Abdominales Avanzado</string>
    <string name="chestAdvanced">Pecho Avanzado</string>
    <string name="armAdvanced">Brazo Avanzado</string>
    <string name="legAdvanced">Pierna Avanzado</string>
    <string name="backAndShoulderAdvanced">Espalda y hombro Avanzado</string>
    <!-- Exercises Description -->
    <string name="default_title_type_description">Abdominales</string>
    <string name="default_description_title">Dia 01: Calentamiento</string>
    <string name="default_description_subtitle">Ejercicios Principiantes</string>
    <string name="default_time_text">%1$d min</string>
    <string name="default_cal">%1$d cal</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel egestas dolor, nec dignissim metus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel egestas dolor, nec dignissim metus.</string>
    <string name="default_video_text">Calentamiento sencillo</string>
    <string name="addExercise">Agregar Ejercicio</string>
    <!--Mi perfil-->
    <string name="MisDatosTXT">Perfil</string>
    <string name="MiRendimientoTXT">Mi Rendimiento</string>
    <string name="MisFavoritosTXT">Mis favoritos</string>
    <string name="MisRutinasTXT">Mis Rutinas</string>
    <string name="uidDato">UID</string>
    <string name="nombreDato">Nombre</string>
    <string name="apellidoDato">Apellido</string>
    <string name="correoDato">Correo</string>
    <string name="IMCTXT">Indice de Masa Corporal</string>
    <string name="passwordDato">Contraseña</string>
    <string name="edadDato">Edad</string>
    <string name="generoDato">Género</string>
    <string name="pesoDato">Peso</string>
    <string name="alturaDato">Altura</string>
    <string name="IMC">IMC</string>
    <string name="perfilimg">perfilimg</string>
    <string name="volverACalcularIMCTXT">Volver a Calcular el IMC</string>
    <string name="cerrarSesion"><u>Cerrar sesión de su cuenta</u></string>
    <string name="nombre">%s</string>
    <string name="mi_perfil">Mi perfil</string>

    <!--ecommerce-->
    <string name="titleEcommerce">Contrata el plan que se adapte a vos</string>
    <string name="planBasico">Begginer Plan</string>
    <string name="planMedio">Toned Body Plan</string>
    <string name="planAvanzado">Shape y Build Plan</string>
    <string name="precioPbasico">$5000/anual</string>
    <string name="precioPmedio">$7000/anual</string>
    <string name="precioPavanzado">$10000/anual</string>
    <string name="DescripcionPlanBasico">Una forma estupenda de empezar tu viaje hacia una vida más sana y flexible</string>
    <string name="DescripcionPlanMedio">Pierde peso rápidamente. Tonifica, esculpe y mejora tu forma física</string>
    <string name="DescripcionPlanAvanzado">Tonifica, desarrolla músculo  y hazte más fuerte donde más te importa</string>
    <string name="ButtomContratar">Contratar</string>


    <!--Contactános-->
    <string name="contactanosTXT">Contactános</string>
    <string name="nombreYApellidoTXT">Nombre y apellido</string>
    <string name="nombreYApellido">Nombre y apellido</string>
    <string name="emailTXT">Email</string>
    <string name="email">Email</string>
    <string name="escribaSuMensajeAquiTXT">Escriba su mensaje aquí…</string>
    <string name="escribaSuMensajeAqui">Escriba su mensaje aquí…</string>
    <string name="mealsTitle">Plan de comidas saludables</string>
    <string name="title_activity_favoritos">activity_favoritos</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--Favoritos-->
    <string name="titleFav">Mis favoritos</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>