<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/homeItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home_icon"
        android:title="@string/homeMenuTitle" />
    <item
        android:id="@+id/exercisesItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/exercises_icon"
        android:onClick="goToExercises"
        android:title="@string/exercisesMenuTitle" />
    <item
        android:id="@+id/shopItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/cart_icon"
        android:title="@string/shopMenuTitle" />
    <item
        android:id="@+id/accountItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_person_24"
        android:onClick="returnToHome"
        android:title="@string/accountMenuTitle" />

</menu>
