<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.ExercisesAdvancedFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/absAdvancedImage"
            android:layout_width="395dp"
            android:layout_height="85dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/absBeginner"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/abs" />

        <TextView
            android:id="@+id/absBeginnerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/absAdvanced"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/absAdvancedImage"
            app:layout_constraintEnd_toEndOf="@+id/absAdvancedImage"
            app:layout_constraintHorizontal_bias="0.092"
            app:layout_constraintStart_toStartOf="@+id/absAdvancedImage"
            app:layout_constraintTop_toTopOf="@+id/absAdvancedImage"
            app:layout_constraintVertical_bias="0.873" />

        <ImageView
            android:id="@+id/chestAdvancedImage"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/chestBeginner"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/absAdvancedImage"
            app:layout_constraintVertical_bias="0.008"
            app:srcCompat="@drawable/chest" />

        <TextView
            android:id="@+id/chestBeginnerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chestAdvanced"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/chestAdvancedImage"
            app:layout_constraintEnd_toEndOf="@+id/chestAdvancedImage"
            app:layout_constraintHorizontal_bias="0.092"
            app:layout_constraintStart_toStartOf="@+id/chestAdvancedImage"
            app:layout_constraintTop_toTopOf="@+id/chestAdvancedImage"
            app:layout_constraintVertical_bias="0.873" />

        <ImageView
            android:id="@+id/armAdvancedImage"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/armBeginner"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chestAdvancedImage"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/arm" />

        <TextView
            android:id="@+id/armBeginnerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/armAdvanced"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/armAdvancedImage"
            app:layout_constraintEnd_toEndOf="@+id/armAdvancedImage"
            app:layout_constraintHorizontal_bias="0.092"
            app:layout_constraintStart_toStartOf="@+id/armAdvancedImage"
            app:layout_constraintTop_toTopOf="@+id/armAdvancedImage"
            app:layout_constraintVertical_bias="0.873" />

        <ImageView
            android:id="@+id/legAdvancedImage"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/legBeginner"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/armAdvancedImage"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/leg" />

        <TextView
            android:id="@+id/legBeginnerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/legAdvanced"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/legAdvancedImage"
            app:layout_constraintEnd_toEndOf="@+id/legAdvancedImage"
            app:layout_constraintHorizontal_bias="0.092"
            app:layout_constraintStart_toStartOf="@+id/legAdvancedImage"
            app:layout_constraintTop_toTopOf="@+id/legAdvancedImage"
            app:layout_constraintVertical_bias="0.873" />

        <ImageView
            android:id="@+id/backAndShoulderAdvancedImage"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/backAndShoulderBeginner"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legAdvancedImage"
            app:layout_constraintVertical_bias="0.034"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/backAndShoulderBeginnerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backAndShoulderAdvanced"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/backAndShoulderAdvancedImage"
            app:layout_constraintEnd_toEndOf="@+id/backAndShoulderAdvancedImage"
            app:layout_constraintHorizontal_bias="0.092"
            app:layout_constraintStart_toStartOf="@+id/backAndShoulderAdvancedImage"
            app:layout_constraintTop_toTopOf="@+id/backAndShoulderAdvancedImage"
            app:layout_constraintVertical_bias="0.873" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>